--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,35 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "server": "nodemon src/server.js",
-    "start": "nodemon src/server.js"
+    "server": "nodemon src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.3.1",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
+  },
   "dependencies": {
+    "@prisma/client": "^6.16.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/express": "^5.0.3",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "init": "^0.1.2",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.10"
+    "npx": "^10.2.2",
+    "prisma": "^6.16.0",
+    "zod": "^4.1.7"
   }
 }
